[package]
name = "joins-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "joins_derive"
proc-macro = true

[dependencies]
syn = "1.0.96"
quote = "1.0.18"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.39"
