[package]
name = "joins"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]
edition = "2018"

[dependencies]
futures = "0.1.27"
multimap = "0.5"
named_type = "0.2.1"
named_type_derive = "0.2.1"
fraction = "0.6.2"
itertools = "0.8"
debug-everything = { version = "1.0", optional = true }
rand = "0.6.5"
either = "1.5.2"
joins-derive = { path = "../joins-derive", optional = true }

[features]
debug = ["debug-everything"]
derive = ["joins-derive"]
default = ["derive"]

[dev-dependencies]
futures03 = { package = "futures", version = "0.3.21", features = ["compat"] }
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
bytes = "1.1.0"
thiserror = "1.0.31"
